--- a/KinectWPF.csproj
+++ b/KinectWPF.csproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Node\Node.cs" />
+    <Compile Include="Node\NodeManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
