--- a/KinectWPF.csproj
+++ b/KinectWPF.csproj
@@ -67,6 +67,7 @@
     </Compile>
     <Compile Include="Enums\FruitTypeEnum.cs" />
     <Compile Include="Helpers\RandomHelper.cs" />
+    <Compile Include="InputControllers\HandPointer.cs" />
     <Compile Include="InputControllers\IInputController.cs" />
     <Compile Include="InputControllers\KinectController\KinectController.cs" />
     <Compile Include="InputControllers\MouseController\MouseController.cs" />
